Minor fixes and improvements.